<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientanimation"
    android:padding="15dp"
    android:focusable="true"
    android:id="@+id/loginlayout"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/a"
        />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/email"
        android:singleLine="true"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="15dp"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:paddingEnd="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF" />


    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/loginemail"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password"
        android:singleLine="true"
        android:textColorHint="#FFFFFF"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="17dp"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/loginpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_here_register"
        android:layout_below="@+id/loginbutton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:id="@+id/reg"
        android:textStyle="bold"
        />

</RelativeLayout>