<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:background="@drawable/gradientanimation"
        android:focusable="true"
        android:id="@+id/reglayout"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <ProgressBar
            android:id="@+id/pbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Create a new Account"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="100dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"
            android:background="#0000E5FF"
            android:padding="4dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp" />

        <ImageView
            android:src="@drawable/round"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilepic"
            android:layout_centerHorizontal="true"
            android:text="@string/add_profile_picture"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/profilepic"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/name"
            android:layout_marginTop="40dp"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/name"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            android:textColor="#000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/a"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:id="@+id/a"
            android:weightSum="3"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1.8"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date Of Birth"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:id="@+id/selectdate"
                    android:hint="DATE OF BIRTH"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:gravity="center"
                    android:editable="false"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#FFFFFF"
                    android:textColor="#000"
                    />


            </LinearLayout>


            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:layout_weight="1.3"
                android:paddingStart="10dp"
                android:layout_gravity="center"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:buttonTint="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/male"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/female"
                    android:id="@+id/female"
                    android:textColor="#FFFFFF"
                    android:buttonTint="#FFFFFF"
                    android:textStyle="bold"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/other"
                    android:buttonTint="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/other"/>

            </RadioGroup>

        </LinearLayout>



        <EditText
            android:id="@+id/reenterpassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/password"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/re_enter_password"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:textColor="#000" />

        <Button
            android:id="@+id/register"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_below="@+id/reenterpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RelativeLayout>


</ScrollView>