<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:id="@+id/editprofilelayout"
        android:focusableInTouchMode="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="750dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="750dp"
                    android:orientation="vertical"
                    android:background="@drawable/phoneback"
                    android:padding="10dp">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pp"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/propicback" />

                    <TextView
                        android:id="@+id/editprofiletext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="Edit Profile Picture"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:textColor="#FFFFFF"
                        android:text="Name"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editname"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#FFFFFF"
                        android:inputType="textFilter"
                        android:text="Username"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/editusername"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="@drawable/edittext"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:singleLine="true" />

                        <ProgressBar
                            android:id="@+id/usernameprogress"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:visibility="invisible" />

                    </RelativeLayout>

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/editprofileprogressbar"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:id="@+id/inuse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="Username already in use"
                        android:textColor="#FF0000"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#FFFFFF"
                        android:text="Description"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editdesc"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:maxLines="4"
                        android:padding="10dp" />

                    <LinearLayout
                        android:id="@+id/a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/username"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.8"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="serif"
                                android:text="Date Of Birth"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editdateofb"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/edittext"
                                android:editable="false"
                                android:gravity="center_vertical"
                                android:hint="DATE OF BIRTH"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp" />


                        </LinearLayout>


                        <RadioGroup
                            android:id="@+id/gen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1.3"
                            android:paddingStart="10dp">

                            <RadioButton
                                android:id="@+id/editmale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#FFFFFF"
                                android:fontFamily="serif"
                                android:text="@string/male"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <RadioButton
                                android:id="@+id/editfemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#FFFFFF"
                                android:fontFamily="serif"
                                android:text="@string/female"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <RadioButton
                                android:id="@+id/editother"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#FFFFFF"
                                android:fontFamily="serif"
                                android:text="@string/other"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RadioGroup>


                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="More Info"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:layout_marginTop="30dp"
                        android:text="Email"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editemail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="#FFFFFF"
                        android:inputType="phone"
                        android:text="Phone"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editphone"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true" />


                    <Button
                        android:id="@+id/save"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button"
                        android:text="@string/save"
                        android:textSize="18sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </RelativeLayout>

</ScrollView>